--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="location">
     <h1 id="city"></h1>
     <h3 id="country"></h3>
+    <h4 id="latlon"></h4>
     </div>
 
     <!-- weather data -->
